# debug-poetry-click

./: README.md  pyproject.toml
.github/workflows/: ci.yml
