[tool.poetry]
name = "debug-poetry-click"
version = "0.1.0"
description = ""
authors = ["Håkon Hægland <hakon.hagland@gmail.com>"]
readme = "README.md"
packages = [
  { include = "debug_poetry_click" }
]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
click = "^8.1.8"

[tool.poetry.scripts]
greet = "debug_poetry_click.app:greet"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
